# shop_with_gAI

./: .gitignore  shop_with_gAI.docx
Data/: README.md  commands.md
Data/archive/nlu/: NLU_DOCUMENTATION.md  README.md  nlu_schema.sql  (+1 more)
Data/docs/: SCHEMA.md
Data/migrations/: migrate_json_to_postgres.ts
Data/schema/: 001_initial_schema.sql
Data/scripts/: generate-seed-sql.js
Data/seeds/: 002_products.sql
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py  models.py
backend/app/admin/: models.py
backend/app/cart/: models.py  router.py  schemas.py  service.py
backend/app/categories/: models.py  router.py  schemas.py  service.py
backend/app/checkout/: router.py  schemas.py  service.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  security.py
backend/app/coupons/: models.py
backend/app/orders/: models.py  router.py  schemas.py  service.py
backend/app/products/: models.py  router.py  schemas.py  service.py
backend/app/reviews/: models.py  router.py  schemas.py  service.py
backend/app/search/: router.py  schemas.py  service.py
backend/app/users/: models.py  router.py  schemas.py  service.py
backend/app/wishlist/: models.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_cart.py  test_categories.py  test_products.py  test_users.py  test_wishlist.py
docs/: AGENT_PROMPTS.md  ARCHITECTURE.md  NLU_INTEGRATION_GUIDE.md  QA_REPORT.md  WORKSTREAMS.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
(+39 files in other folders)
